--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   "author": "Mahmoud Okasha",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/passport-jwt": "^3.0.6",
     "concurrently": "^7.1.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "colors": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.2.10"
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.10",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0"
   }
 }
