--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/passport-jwt": "^3.0.6",
+    "@types/speakingurl": "^13.0.3",
     "concurrently": "^7.1.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
@@ -29,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "speakingurl": "^14.0.1"
   }
 }
